# Kitanai

./: CMakeLists.txt  Clean.ktn  Compressed.ktn  ExtremCompression  Kitanai.cpp  Kitanai.hpp  LICENSE  README.md  Sample.ktn
Samples/: 99bottles.ktn  Deadfish.ktn  DynamicStackPosition.ktn  Fibonacci.ktn  HelloWorlds.ktn  Mountains.ktn  Read.ktn  Rec.ktn  RecFunc.ktn  Split.ktn  Stack.ktn
include/: Functions.hpp  Node.hpp  Program.hpp  StdLib.hpp  Token.hpp
src/: Functions.cpp  Node.cpp  Program.cpp  StdLib.cpp  Token.cpp  experiment.cppl  main.cpp
